@@ -17,6 +17,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -39,26 +40,46 @@ class ExperienciaMapperTest {
 
     private Experiencia experienciaValida;
     private ExperienciaDto experienciaDtoValido;
-    private Imagen imagen;
-    private ImagenDto imagenDto;
+    private Imagen imagen1;
+    private Imagen imagen2;
+    private ImagenDto imagenDto1;
+    private ImagenDto imagenDto2;
+    private List<Imagen> listaImagenes;
+    private List<ImagenDto> listaImagenesDto;
     private Usuario usuario;
 
     @BeforeEach
     void setUp() {
         // Arrange - Configuración inicial para cada test
 
-        // Crear imagen
-        imagen = Imagen.builder()
+        // Crear imágenes
+        imagen1 = Imagen.builder()
                 .id(1)
-                .url("proyecto.jpg")
-                .alt("Captura del proyecto")
+                .url("proyecto-principal.jpg")
+                .alt("Captura principal del proyecto")
                 .build();
 
-        imagenDto = ImagenDto.builder()
-                .id(1)
-                .url("proyecto.jpg")
-                .alt("Captura del proyecto")
+        imagen2 = Imagen.builder()
+                .id(2)
+                .url("proyecto-detalle.jpg")
+                .alt("Detalle del proyecto")
                 .build();
+
+        listaImagenes = Arrays.asList(imagen1, imagen2);
+
+        imagenDto1 = ImagenDto.builder()
+                .id(1)
+                .url("proyecto-principal.jpg")
+                .alt("Captura principal del proyecto")
+                .build();
+
+        imagenDto2 = ImagenDto.builder()
+                .id(2)
+                .url("proyecto-detalle.jpg")
+                .alt("Detalle del proyecto")
+                .build();
+
+        listaImagenesDto = Arrays.asList(imagenDto1, imagenDto2);
 
         // Crear usuario
         usuario = Usuario.builder()
@@ -70,7 +91,7 @@ class ExperienciaMapperTest {
                 .descripcion("Apasionado por la tecnología")
                 .build();
 
-        // 🔥 Crear experiencia válida con lista de tecnologías
+        // Crear experiencia válida con lista de imágenes y tecnologías
         experienciaValida = Experiencia.builder()
                 .id(1)
                 .titulo("Sistema de Gestión de Usuarios")
@@ -79,12 +100,12 @@ class ExperienciaMapperTest {
                 .descripcion("Desarrollo de API REST con Spring Boot y JWT para gestión de usuarios")
                 .link("https://github.com/usuario/proyecto")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT, TecnologiaUsada.JAVA)) // 🔥 Cambiado a lista
-                .imagen(imagen)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT, TecnologiaUsada.JAVA))
+                .imagenes(listaImagenes) // 🔥 Cambiado a lista de imágenes
                 .usuario(usuario)
                 .build();
 
-        // 🔥 Crear ExperienciaDto válido con lista de tecnologías
+        // Crear ExperienciaDto válido con lista de imágenes y tecnologías
         experienciaDtoValido = ExperienciaDto.builder()
                 .id(1)
                 .titulo("Sistema de Gestión de Usuarios")
@@ -93,11 +114,11 @@ class ExperienciaMapperTest {
                 .descripcion("Desarrollo de API REST con Spring Boot y JWT para gestión de usuarios")
                 .link("https://github.com/usuario/proyecto")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT, TecnologiaUsada.JAVA)) // 🔥 Cambiado a lista
-                .imagen(imagenDto)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT, TecnologiaUsada.JAVA))
+                .imagenes(listaImagenesDto) // 🔥 Cambiado a lista de imágenes
                 .build();
 
-        // Configurar comportamiento del mock de ImagenMapper
+        // Configurar comportamiento del mock de ImagenMapper para toImagenDto
         when(imagenMapper.toImagenDto(any(Imagen.class))).thenAnswer(invocation -> {
             Imagen img = invocation.getArgument(0);
             if (img == null) return null;
@@ -108,6 +129,7 @@ class ExperienciaMapperTest {
                     .build();
         });
 
+        // Configurar comportamiento del mock de ImagenMapper para toImagen
         when(imagenMapper.toImagen(any(ImagenDto.class))).thenAnswer(invocation -> {
             ImagenDto dto = invocation.getArgument(0);
             if (dto == null) return null;
@@ -141,47 +163,85 @@ class ExperienciaMapperTest {
         assertEquals(experienciaValida.getTipoExperiencia(), resultado.getTipoExperiencia(),
                 "El tipo de experiencia debería coincidir");
 
-        // 🔥 Verificar que la lista de tecnologías se mapea correctamente
+        // Verificar que la lista de tecnologías se mapea correctamente
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertEquals(experienciaValida.getTecnologiasUsadas().size(), resultado.getTecnologiasUsadas().size(),
                 "El tamaño de la lista de tecnologías debería coincidir");
         assertTrue(resultado.getTecnologiasUsadas().containsAll(experienciaValida.getTecnologiasUsadas()),
                 "Las tecnologías usadas deberían coincidir");
 
-        // Verificar que se llamó a ImagenMapper para la imagen
-        verify(imagenMapper, times(1)).toImagenDto(experienciaValida.getImagen());
+        // 🔥 Verificar que la lista de imágenes se mapea correctamente
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(experienciaValida.getImagenes().size(), resultado.getImagenes().size(),
+                "El tamaño de la lista de imágenes debería coincidir");
+        assertEquals(experienciaValida.getImagenes().get(0).getId(), resultado.getImagenes().get(0).getId(),
+                "El ID de la primera imagen debería coincidir");
+        assertEquals(experienciaValida.getImagenes().get(1).getId(), resultado.getImagenes().get(1).getId(),
+                "El ID de la segunda imagen debería coincidir");
+
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagenDto(any(Imagen.class));
     }
 
     @Test
-    @DisplayName("toExperienciaDto - Debería mapear Experiencia sin imagen a ExperienciaDto")
-    void toExperienciaDto_ShouldMapExperienciaWithoutImageToExperienciaDto() {
-        // Arrange - Experiencia sin imagen
-        Experiencia experienciaSinImagen = Experiencia.builder()
+    @DisplayName("toExperienciaDto - Debería mapear Experiencia sin imágenes a ExperienciaDto")
+    void toExperienciaDto_ShouldMapExperienciaWithoutImagesToExperienciaDto() {
+        // Arrange - Experiencia sin imágenes
+        Experiencia experienciaSinImagenes = Experiencia.builder()
                 .id(2)
-                .titulo("Proyecto sin Imagen")
+                .titulo("Proyecto sin Imágenes")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2024, 6, 1))
                 .descripcion("Descripción válida con más de 5 caracteres")
-                .link("https://github.com/usuario/proyecto-sin-imagen")
+                .link("https://github.com/usuario/proyecto-sin-imagenes")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVA)) // 🔥 Cambiado a lista
-                .imagen(null)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVA))
+                .imagenes(null) // Sin imágenes
                 .usuario(null)
                 .build();
 
         // Act
-        ExperienciaDto resultado = experienciaMapper.toExperienciaDto(experienciaSinImagen);
+        ExperienciaDto resultado = experienciaMapper.toExperienciaDto(experienciaSinImagenes);
 
         // Assert
         assertNotNull(resultado, "El resultado no debería ser nulo");
-        assertEquals(experienciaSinImagen.getId(), resultado.getId(), "El ID debería coincidir");
-        assertEquals(experienciaSinImagen.getTitulo(), resultado.getTitulo(), "El título debería coincidir");
-        assertNull(resultado.getImagen(), "La imagen debería ser nula");
+        assertEquals(experienciaSinImagenes.getId(), resultado.getId(), "El ID debería coincidir");
+        assertEquals(experienciaSinImagenes.getTitulo(), resultado.getTitulo(), "El título debería coincidir");
+        assertNull(resultado.getImagenes(), "La lista de imágenes debería ser nula");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertTrue(resultado.getTecnologiasUsadas().contains(TecnologiaUsada.JAVA),
                 "La tecnología usada debería ser JAVA");
 
-        // Verificar que no se llamó a ImagenMapper para imagen nula
+        // Verificar que no se llamó a ImagenMapper para imágenes nulas
+        verify(imagenMapper, never()).toImagenDto(any());
+    }
+
+    @Test
+    @DisplayName("toExperienciaDto - Debería mapear Experiencia con lista vacía de imágenes")
+    void toExperienciaDto_ShouldMapExperienciaWithEmptyImagesList() {
+        // Arrange - Experiencia con lista vacía de imágenes
+        Experiencia experienciaConListaVacia = Experiencia.builder()
+                .id(3)
+                .titulo("Proyecto con Lista Vacía")
+                .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
+                .fechaFinProyecto(LocalDate.of(2024, 6, 1))
+                .descripcion("Descripción válida con más de 5 caracteres")
+                .link("https://github.com/usuario/proyecto-lista-vacia")
+                .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT))
+                .imagenes(Collections.emptyList()) // Lista vacía
+                .usuario(null)
+                .build();
+
+        // Act
+        ExperienciaDto resultado = experienciaMapper.toExperienciaDto(experienciaConListaVacia);
+
+        // Assert
+        assertNotNull(resultado, "El resultado no debería ser nulo");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertTrue(resultado.getImagenes().isEmpty(), "La lista de imágenes debería estar vacía");
+
+        // Verificar que no se llamó a ImagenMapper para lista vacía
         verify(imagenMapper, never()).toImagenDto(any());
     }
 
@@ -190,15 +250,15 @@ class ExperienciaMapperTest {
     void toExperienciaDto_ShouldMapExperienciaWithNullFechaFinProyecto() {
         // Arrange - Experiencia con fecha de fin nula (proyecto en curso)
         Experiencia experienciaEnCurso = Experiencia.builder()
-                .id(3)
+                .id(4)
                 .titulo("Proyecto en Curso")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(null)
                 .descripcion("Descripción válida con más de 5 caracteres")
                 .link("https://github.com/usuario/proyecto-en-curso")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.PYTHON, TecnologiaUsada.DJANGO)) // 🔥 Cambiado a lista
-                .imagen(imagen)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.PYTHON, TecnologiaUsada.DJANGO))
+                .imagenes(listaImagenes)
                 .usuario(null)
                 .build();
 
@@ -212,8 +272,8 @@ class ExperienciaMapperTest {
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertEquals(2, resultado.getTecnologiasUsadas().size(), "Debería tener 2 tecnologías");
 
-        // Verificar que se llamó a ImagenMapper para la imagen
-        verify(imagenMapper, times(1)).toImagenDto(experienciaEnCurso.getImagen());
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagenDto(any(Imagen.class));
     }
 
     @Test
@@ -221,15 +281,15 @@ class ExperienciaMapperTest {
     void toExperienciaDto_ShouldMapExperienciaWithNullUsuario() {
         // Arrange - Experiencia sin usuario
         Experiencia experienciaSinUsuario = Experiencia.builder()
-                .id(4)
+                .id(5)
                 .titulo("Proyecto Independiente")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2024, 6, 1))
                 .descripcion("Descripción válida con más de 5 caracteres")
                 .link("https://github.com/usuario/proyecto-independiente")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVASCRIPT, TecnologiaUsada.TYPESCRIPT)) // 🔥 Cambiado a lista
-                .imagen(imagen)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVASCRIPT, TecnologiaUsada.TYPESCRIPT))
+                .imagenes(listaImagenes)
                 .usuario(null)
                 .build();
 
@@ -239,14 +299,15 @@ class ExperienciaMapperTest {
         // Assert
         assertNotNull(resultado, "El resultado no debería ser nulo");
         assertEquals(experienciaSinUsuario.getId(), resultado.getId(), "El ID debería coincidir");
-        assertNotNull(resultado.getImagen(), "La imagen no debería ser nula");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(2, resultado.getImagenes().size(), "Debería tener 2 imágenes");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertTrue(resultado.getTecnologiasUsadas().containsAll(
                         List.of(TecnologiaUsada.JAVASCRIPT, TecnologiaUsada.TYPESCRIPT)),
                 "Las tecnologías usadas deberían coincidir");
 
-        // Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagenDto(experienciaSinUsuario.getImagen());
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagenDto(any(Imagen.class));
     }
 
     @Test
@@ -284,46 +345,83 @@ class ExperienciaMapperTest {
         assertEquals(experienciaDtoValido.getTipoExperiencia(), resultado.getTipoExperiencia(),
                 "El tipo de experiencia debería coincidir");
 
-        // 🔥 Verificar que la lista de tecnologías se mapea correctamente
+        // Verificar que la lista de tecnologías se mapea correctamente
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertEquals(experienciaDtoValido.getTecnologiasUsadas().size(), resultado.getTecnologiasUsadas().size(),
                 "El tamaño de la lista de tecnologías debería coincidir");
         assertTrue(resultado.getTecnologiasUsadas().containsAll(experienciaDtoValido.getTecnologiasUsadas()),
                 "Las tecnologías usadas deberían coincidir");
 
-        // Verificar que se llamó a ImagenMapper para la imagen
-        verify(imagenMapper, times(1)).toImagen(experienciaDtoValido.getImagen());
+        // 🔥 Verificar que la lista de imágenes se mapea correctamente
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(experienciaDtoValido.getImagenes().size(), resultado.getImagenes().size(),
+                "El tamaño de la lista de imágenes debería coincidir");
+        assertEquals(experienciaDtoValido.getImagenes().get(0).getId(), resultado.getImagenes().get(0).getId(),
+                "El ID de la primera imagen debería coincidir");
+        assertEquals(experienciaDtoValido.getImagenes().get(1).getId(), resultado.getImagenes().get(1).getId(),
+                "El ID de la segunda imagen debería coincidir");
+
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagen(any(ImagenDto.class));
     }
 
     @Test
-    @DisplayName("toExperiencia - Debería mapear ExperienciaDto sin imagen a Experiencia")
-    void toExperiencia_ShouldMapExperienciaDtoWithoutImageToExperiencia() {
-        // Arrange - ExperienciaDto sin imagen
-        ExperienciaDto experienciaDtoSinImagen = ExperienciaDto.builder()
-                .id(5)
-                .titulo("Proyecto sin Imagen DTO")
+    @DisplayName("toExperiencia - Debería mapear ExperienciaDto sin imágenes a Experiencia")
+    void toExperiencia_ShouldMapExperienciaDtoWithoutImagesToExperiencia() {
+        // Arrange - ExperienciaDto sin imágenes
+        ExperienciaDto experienciaDtoSinImagenes = ExperienciaDto.builder()
+                .id(6)
+                .titulo("Proyecto sin Imágenes DTO")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2024, 6, 1))
                 .descripcion("Descripción válida con más de 5 caracteres")
-                .link("https://github.com/usuario/proyecto-sin-imagen-dto")
+                .link("https://github.com/usuario/proyecto-sin-imagenes-dto")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.REACT)) // 🔥 Cambiado a lista
-                .imagen(null)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.REACT))
+                .imagenes(null)
                 .build();
 
         // Act
-        Experiencia resultado = experienciaMapper.toExperiencia(experienciaDtoSinImagen);
+        Experiencia resultado = experienciaMapper.toExperiencia(experienciaDtoSinImagenes);
 
         // Assert
         assertNotNull(resultado, "El resultado no debería ser nulo");
-        assertEquals(experienciaDtoSinImagen.getId(), resultado.getId(), "El ID debería coincidir");
-        assertEquals(experienciaDtoSinImagen.getTitulo(), resultado.getTitulo(), "El título debería coincidir");
-        assertNull(resultado.getImagen(), "La imagen debería ser nula");
+        assertEquals(experienciaDtoSinImagenes.getId(), resultado.getId(), "El ID debería coincidir");
+        assertEquals(experienciaDtoSinImagenes.getTitulo(), resultado.getTitulo(), "El título debería coincidir");
+        assertNull(resultado.getImagenes(), "La lista de imágenes debería ser nula");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertTrue(resultado.getTecnologiasUsadas().contains(TecnologiaUsada.REACT),
                 "La tecnología usada debería ser REACT");
 
-        // Verificar que no se llamó a ImagenMapper para imagen nula
+        // Verificar que no se llamó a ImagenMapper para imágenes nulas
+        verify(imagenMapper, never()).toImagen(any());
+    }
+
+    @Test
+    @DisplayName("toExperiencia - Debería mapear ExperienciaDto con lista vacía de imágenes")
+    void toExperiencia_ShouldMapExperienciaDtoWithEmptyImagesList() {
+        // Arrange - ExperienciaDto con lista vacía de imágenes
+        ExperienciaDto experienciaDtoListaVacia = ExperienciaDto.builder()
+                .id(7)
+                .titulo("Proyecto DTO Lista Vacía")
+                .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
+                .fechaFinProyecto(LocalDate.of(2024, 6, 1))
+                .descripcion("Descripción válida con más de 5 caracteres")
+                .link("https://github.com/usuario/proyecto-lista-vacia-dto")
+                .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVA))
+                .imagenes(Collections.emptyList())
+                .build();
+
+        // Act
+        Experiencia resultado = experienciaMapper.toExperiencia(experienciaDtoListaVacia);
+
+        // Assert
+        assertNotNull(resultado, "El resultado no debería ser nulo");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertTrue(resultado.getImagenes().isEmpty(), "La lista de imágenes debería estar vacía");
+
+        // Verificar que no se llamó a ImagenMapper para lista vacía
         verify(imagenMapper, never()).toImagen(any());
     }
 
@@ -332,15 +430,15 @@ class ExperienciaMapperTest {
     void toExperiencia_ShouldMapExperienciaDtoWithNullFechaFinProyecto() {
         // Arrange - ExperienciaDto con fecha de fin nula
         ExperienciaDto experienciaDtoEnCurso = ExperienciaDto.builder()
-                .id(6)
+                .id(8)
                 .titulo("Proyecto en Curso DTO")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(null)
                 .descripcion("Descripción válida con más de 5 caracteres")
                 .link("https://github.com/usuario/proyecto-en-curso-dto")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.DJANGO, TecnologiaUsada.PYTHON)) // 🔥 Cambiado a lista
-                .imagen(imagenDto)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.DJANGO, TecnologiaUsada.PYTHON))
+                .imagenes(listaImagenesDto)
                 .build();
 
         // Act
@@ -353,8 +451,8 @@ class ExperienciaMapperTest {
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertEquals(2, resultado.getTecnologiasUsadas().size(), "Debería tener 2 tecnologías");
 
-        // Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagen(experienciaDtoEnCurso.getImagen());
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagen(any(ImagenDto.class));
     }
 
     @Test
@@ -396,7 +494,7 @@ class ExperienciaMapperTest {
         assertEquals(experienciaValida.getTipoExperiencia(), experienciaConvertida.getTipoExperiencia(),
                 "El tipo de experiencia debería ser el mismo");
 
-        // 🔥 Verificar que la lista de tecnologías se mantiene en el round-trip
+        // Verificar que la lista de tecnologías se mantiene en el round-trip
         assertNotNull(experienciaConvertida.getTecnologiasUsadas(),
                 "Las tecnologías usadas no deberían ser nulas");
         assertEquals(experienciaValida.getTecnologiasUsadas().size(),
@@ -406,21 +504,31 @@ class ExperienciaMapperTest {
                         experienciaValida.getTecnologiasUsadas()),
                 "Las tecnologías usadas deberían ser las mismas");
 
-        // Verificar que la imagen se mapeó correctamente en ambos sentidos
-        assertNotNull(experienciaConvertida.getImagen(), "La imagen no debería ser nula");
-        assertEquals(experienciaValida.getImagen().getId(), experienciaConvertida.getImagen().getId(),
-                "El ID de la imagen debería coincidir");
-        assertEquals(experienciaValida.getImagen().getUrl(), experienciaConvertida.getImagen().getUrl(),
-                "La URL de la imagen debería coincidir");
-        assertEquals(experienciaValida.getImagen().getAlt(), experienciaConvertida.getImagen().getAlt(),
-                "El alt de la imagen debería coincidir");
+        // 🔥 Verificar que la lista de imágenes se mantiene en el round-trip
+        assertNotNull(experienciaConvertida.getImagenes(),
+                "La lista de imágenes no debería ser nula");
+        assertEquals(experienciaValida.getImagenes().size(),
+                experienciaConvertida.getImagenes().size(),
+                "El tamaño de la lista de imágenes debería ser el mismo");
+        assertEquals(experienciaValida.getImagenes().get(0).getId(),
+                experienciaConvertida.getImagenes().get(0).getId(),
+                "El ID de la primera imagen debería ser el mismo");
+        assertEquals(experienciaValida.getImagenes().get(1).getId(),
+                experienciaConvertida.getImagenes().get(1).getId(),
+                "El ID de la segunda imagen debería ser el mismo");
+        assertEquals(experienciaValida.getImagenes().get(0).getUrl(),
+                experienciaConvertida.getImagenes().get(0).getUrl(),
+                "La URL de la primera imagen debería ser la misma");
+        assertEquals(experienciaValida.getImagenes().get(1).getUrl(),
+                experienciaConvertida.getImagenes().get(1).getUrl(),
+                "La URL de la segunda imagen debería ser la misma");
     }
 
     @Test
-    @DisplayName("toExperienciaDto y toExperiencia - Deberían ser consistentes con objetos nulos")
-    void toExperienciaDtoAndToExperiencia_ShouldBeConsistentWithNullObjects() {
-        // Arrange - ExperienciaDto sin imagen
-        ExperienciaDto dtoSinImagen = ExperienciaDto.builder()
+    @DisplayName("toExperienciaDto y toExperiencia - Deberían ser consistentes con objetos sin imágenes")
+    void toExperienciaDtoAndToExperiencia_ShouldBeConsistentWithNoImages() {
+        // Arrange - ExperienciaDto sin imágenes
+        ExperienciaDto dtoSinImagenes = ExperienciaDto.builder()
                 .id(10)
                 .titulo("Proyecto Test")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
@@ -428,20 +536,20 @@ class ExperienciaMapperTest {
                 .descripcion("Descripción válida")
                 .link("https://github.com/usuario/test")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT)) // 🔥 Cambiado a lista
-                .imagen(null)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT))
+                .imagenes(null)
                 .build();
 
         // Act - Convertir a Experiencia y luego de vuelta a ExperienciaDto
-        Experiencia experiencia = experienciaMapper.toExperiencia(dtoSinImagen);
+        Experiencia experiencia = experienciaMapper.toExperiencia(dtoSinImagenes);
         ExperienciaDto dtoConvertido = experienciaMapper.toExperienciaDto(experiencia);
 
         // Assert
         assertNotNull(experiencia, "La experiencia no debería ser nula");
         assertNotNull(dtoConvertido, "El DTO convertido no debería ser nulo");
-        assertEquals(dtoSinImagen.getId(), dtoConvertido.getId(), "El ID debería ser el mismo");
-        assertEquals(dtoSinImagen.getTitulo(), dtoConvertido.getTitulo(), "El título debería ser el mismo");
-        assertNull(dtoConvertido.getImagen(), "La imagen debería ser nula");
+        assertEquals(dtoSinImagenes.getId(), dtoConvertido.getId(), "El ID debería ser el mismo");
+        assertEquals(dtoSinImagenes.getTitulo(), dtoConvertido.getTitulo(), "El título debería ser el mismo");
+        assertNull(dtoConvertido.getImagenes(), "La lista de imágenes debería ser nula");
         assertNotNull(dtoConvertido.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertTrue(dtoConvertido.getTecnologiasUsadas().contains(TecnologiaUsada.SPRINGBOOT),
                 "La tecnología usada debería ser SPRINGBOOT");
@@ -459,8 +567,8 @@ class ExperienciaMapperTest {
                 .descripcion("Descripción válida")
                 .link("https://github.com/usuario/proyecto-en-curso")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.PYTHON)) // 🔥 Cambiado a lista
-                .imagen(null)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.PYTHON))
+                .imagenes(Collections.emptyList())
                 .usuario(null)
                 .build();
 
@@ -479,6 +587,61 @@ class ExperienciaMapperTest {
                 "Las tecnologías usadas no deberían ser nulas");
         assertTrue(experienciaConvertida.getTecnologiasUsadas().contains(TecnologiaUsada.PYTHON),
                 "La tecnología usada debería ser PYTHON");
+        assertNotNull(experienciaConvertida.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertTrue(experienciaConvertida.getImagenes().isEmpty(), "La lista de imágenes debería estar vacía");
+    }
+
+    @Test
+    @DisplayName("toExperienciaDto y toExperiencia - Deberían ser consistentes con múltiples imágenes")
+    void toExperienciaDtoAndToExperiencia_ShouldBeConsistentWithMultipleImages() {
+        // Arrange - Crear una experiencia con múltiples imágenes
+        Imagen img1 = Imagen.builder().id(1).url("img1.jpg").alt("Imagen 1").build();
+        Imagen img2 = Imagen.builder().id(2).url("img2.jpg").alt("Imagen 2").build();
+        Imagen img3 = Imagen.builder().id(3).url("img3.jpg").alt("Imagen 3").build();
+        List<Imagen> imagenesMultiples = Arrays.asList(img1, img2, img3);
+
+        Experiencia experienciaConMultiplesImagenes = Experiencia.builder()
+                .id(12)
+                .titulo("Proyecto con Múltiples Imágenes")
+                .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
+                .fechaFinProyecto(LocalDate.of(2024, 6, 1))
+                .descripcion("Descripción válida")
+                .link("https://github.com/usuario/multiples-imagenes")
+                .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVA))
+                .imagenes(imagenesMultiples)
+                .usuario(null)
+                .build();
+
+        // Configurar mock para múltiples imágenes
+        when(imagenMapper.toImagenDto(any(Imagen.class))).thenAnswer(invocation -> {
+            Imagen img = invocation.getArgument(0);
+            if (img == null) return null;
+            return ImagenDto.builder()
+                    .id(img.getId())
+                    .url(img.getUrl())
+                    .alt(img.getAlt())
+                    .build();
+        });
+
+        // Act - Convertir a DTO y luego de vuelta a Experiencia
+        ExperienciaDto dto = experienciaMapper.toExperienciaDto(experienciaConMultiplesImagenes);
+        Experiencia experienciaConvertida = experienciaMapper.toExperiencia(dto);
+
+        // Assert
+        assertNotNull(dto, "El DTO no debería ser nulo");
+        assertNotNull(experienciaConvertida, "La experiencia convertida no debería ser nula");
+        assertEquals(experienciaConMultiplesImagenes.getId(), experienciaConvertida.getId(),
+                "El ID debería ser el mismo");
+        assertNotNull(experienciaConvertida.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(3, experienciaConvertida.getImagenes().size(), "Debería tener 3 imágenes");
+        assertEquals("img1.jpg", experienciaConvertida.getImagenes().get(0).getUrl());
+        assertEquals("img2.jpg", experienciaConvertida.getImagenes().get(1).getUrl());
+        assertEquals("img3.jpg", experienciaConvertida.getImagenes().get(2).getUrl());
+
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(3)).toImagenDto(any(Imagen.class));
+        verify(imagenMapper, times(3)).toImagen(any(ImagenDto.class));
     }
 
     // ==================== TESTS CON DIFERENTES ENUMS ====================
@@ -499,8 +662,8 @@ class ExperienciaMapperTest {
                     .descripcion("Descripción válida con más de 5 caracteres")
                     .link("https://github.com/usuario/proyecto")
                     .tipoExperiencia(tipo)
-                    .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT)) // 🔥 Cambiado a lista
-                    .imagen(imagen)
+                    .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT))
+                    .imagenes(listaImagenes)
                     .usuario(null)
                     .build();
 
@@ -530,8 +693,8 @@ class ExperienciaMapperTest {
                     .descripcion("Descripción válida con más de 5 caracteres")
                     .link("https://github.com/usuario/proyecto")
                     .tipoExperiencia(tipo)
-                    .tecnologiasUsadas(List.of(TecnologiaUsada.REACT)) // 🔥 Cambiado a lista
-                    .imagen(imagenDto)
+                    .tecnologiasUsadas(List.of(TecnologiaUsada.REACT))
+                    .imagenes(listaImagenesDto)
                     .build();
 
             // Act
@@ -560,8 +723,8 @@ class ExperienciaMapperTest {
                     .descripcion("Descripción válida con más de 5 caracteres")
                     .link("https://github.com/usuario/proyecto")
                     .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                    .tecnologiasUsadas(List.of(tecnologia)) // 🔥 Cambiado a lista
-                    .imagen(imagen)
+                    .tecnologiasUsadas(List.of(tecnologia))
+                    .imagenes(Collections.emptyList())
                     .usuario(null)
                     .build();
 
@@ -596,8 +759,8 @@ class ExperienciaMapperTest {
                 .descripcion("Descripción válida con más de 5 caracteres")
                 .link("https://github.com/usuario/proyecto-multiples")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(tecnologiasMultiples) // 🔥 Lista múltiple
-                .imagen(imagen)
+                .tecnologiasUsadas(tecnologiasMultiples)
+                .imagenes(Collections.emptyList())
                 .usuario(null)
                 .build();
 
@@ -628,8 +791,8 @@ class ExperienciaMapperTest {
                     .descripcion("Descripción válida con más de 5 caracteres")
                     .link("https://github.com/usuario/proyecto")
                     .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                    .tecnologiasUsadas(List.of(tecnologia)) // 🔥 Cambiado a lista
-                    .imagen(imagenDto)
+                    .tecnologiasUsadas(List.of(tecnologia))
+                    .imagenes(Collections.emptyList())
                     .build();
 
             // Act
@@ -662,8 +825,8 @@ class ExperienciaMapperTest {
                 .descripcion("Descripción válida con más de 5 caracteres")
                 .link("https://github.com/usuario/proyecto-dto-multiples")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(tecnologiasMultiples) // 🔥 Lista múltiple
-                .imagen(imagenDto)
+                .tecnologiasUsadas(tecnologiasMultiples)
+                .imagenes(Collections.emptyList())
                 .build();
 
         // Act
@@ -684,15 +847,15 @@ class ExperienciaMapperTest {
     void toExperienciaDto_ShouldHandleExperienciaWithEmptyFields() {
         // Arrange - Experiencia con campos vacíos
         Experiencia experienciaVacia = Experiencia.builder()
-                .id(7)
+                .id(9)
                 .titulo("")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2024, 6, 1))
                 .descripcion("")
                 .link("")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of()) // 🔥 Lista vacía
-                .imagen(null)
+                .tecnologiasUsadas(List.of())
+                .imagenes(null)
                 .usuario(null)
                 .build();
 
@@ -704,7 +867,7 @@ class ExperienciaMapperTest {
         assertEquals("", resultado.getTitulo(), "El título vacío debería mantenerse");
         assertEquals("", resultado.getDescripcion(), "La descripción vacía debería mantenerse");
         assertEquals("", resultado.getLink(), "El link vacío debería mantenerse");
-        assertNull(resultado.getImagen(), "La imagen debería ser nula");
+        assertNull(resultado.getImagenes(), "La lista de imágenes debería ser nula");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertTrue(resultado.getTecnologiasUsadas().isEmpty(), "La lista de tecnologías debería estar vacía");
 
@@ -717,15 +880,15 @@ class ExperienciaMapperTest {
     void toExperiencia_ShouldHandleExperienciaDtoWithEmptyFields() {
         // Arrange - ExperienciaDto con campos vacíos
         ExperienciaDto experienciaDtoVacio = ExperienciaDto.builder()
-                .id(8)
+                .id(10)
                 .titulo("")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2024, 6, 1))
                 .descripcion("")
                 .link("")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of()) // 🔥 Lista vacía
-                .imagen(null)
+                .tecnologiasUsadas(List.of())
+                .imagenes(null)
                 .build();
 
         // Act
@@ -736,7 +899,7 @@ class ExperienciaMapperTest {
         assertEquals("", resultado.getTitulo(), "El título vacío debería mantenerse");
         assertEquals("", resultado.getDescripcion(), "La descripción vacía debería mantenerse");
         assertEquals("", resultado.getLink(), "El link vacío debería mantenerse");
-        assertNull(resultado.getImagen(), "La imagen debería ser nula");
+        assertNull(resultado.getImagenes(), "La lista de imágenes debería ser nula");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertTrue(resultado.getTecnologiasUsadas().isEmpty(), "La lista de tecnologías debería estar vacía");
 
@@ -756,8 +919,8 @@ class ExperienciaMapperTest {
                 .descripcion("Descripción válida")
                 .link("https://github.com/usuario/proyecto-sin-id")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT)) // 🔥 Cambiado a lista
-                .imagen(imagen)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.SPRINGBOOT))
+                .imagenes(listaImagenes)
                 .usuario(null)
                 .build();
 
@@ -769,9 +932,11 @@ class ExperienciaMapperTest {
         assertNull(resultado.getId(), "El ID debería ser nulo");
         assertEquals(experienciaSinId.getTitulo(), resultado.getTitulo(), "El título debería coincidir");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(2, resultado.getImagenes().size(), "Debería tener 2 imágenes");
 
-        // Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagenDto(experienciaSinId.getImagen());
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagenDto(any(Imagen.class));
     }
 
     @Test
@@ -786,8 +951,8 @@ class ExperienciaMapperTest {
                 .descripcion("Descripción válida")
                 .link("https://github.com/usuario/proyecto-sin-id-dto")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.REACT)) // 🔥 Cambiado a lista
-                .imagen(imagenDto)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.REACT))
+                .imagenes(listaImagenesDto)
                 .build();
 
         // Act
@@ -798,9 +963,11 @@ class ExperienciaMapperTest {
         assertNull(resultado.getId(), "El ID debería ser nulo");
         assertEquals(experienciaDtoSinId.getTitulo(), resultado.getTitulo(), "El título debería coincidir");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(2, resultado.getImagenes().size(), "Debería tener 2 imágenes");
 
-        // Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagen(experienciaDtoSinId.getImagen());
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagen(any(ImagenDto.class));
     }
 
     // ==================== TESTS DE VERIFICACIÓN DE INTERACCIONES ====================
@@ -811,8 +978,8 @@ class ExperienciaMapperTest {
         // Act
         experienciaMapper.toExperienciaDto(experienciaValida);
 
-        // Assert - Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagenDto(experienciaValida.getImagen());
+        // Assert - Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagenDto(any(Imagen.class));
     }
 
     @Test
@@ -821,29 +988,29 @@ class ExperienciaMapperTest {
         // Act
         experienciaMapper.toExperiencia(experienciaDtoValido);
 
-        // Assert - Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagen(experienciaDtoValido.getImagen());
+        // Assert - Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagen(any(ImagenDto.class));
     }
 
     @Test
     @DisplayName("Verificar que no hay interacciones no deseadas con ImagenMapper")
     void verifyNoUnexpectedInteractionsWithImagenMapper() {
-        // Arrange - Experiencia sin imagen
-        Experiencia experienciaSinImagen = Experiencia.builder()
-                .id(9)
-                .titulo("Sin Imagen")
+        // Arrange - Experiencia sin imágenes
+        Experiencia experienciaSinImagenes = Experiencia.builder()
+                .id(11)
+                .titulo("Sin Imágenes")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2024, 6, 1))
                 .descripcion("Descripción válida")
-                .link("https://github.com/usuario/sin-imagen")
+                .link("https://github.com/usuario/sin-imagenes")
                 .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVA)) // 🔥 Cambiado a lista
-                .imagen(null)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVA))
+                .imagenes(null)
                 .usuario(null)
                 .build();
 
         // Act
-        experienciaMapper.toExperienciaDto(experienciaSinImagen);
+        experienciaMapper.toExperienciaDto(experienciaSinImagenes);
 
         // Assert - Verificar que no hay interacciones
         verify(imagenMapper, never()).toImagenDto(any());
@@ -853,34 +1020,50 @@ class ExperienciaMapperTest {
     // ==================== TESTS CON OBJETOS COMPLEJOS ====================
 
     @Test
-    @DisplayName("toExperienciaDto - Debería mapear experiencia con imagen completa")
-    void toExperienciaDto_ShouldMapExperienciaWithFullImage() {
-        // Arrange - Imagen con todos los campos
-        Imagen imagenCompleta = Imagen.builder()
+    @DisplayName("toExperienciaDto - Debería mapear experiencia con imágenes completas")
+    void toExperienciaDto_ShouldMapExperienciaWithFullImages() {
+        // Arrange - Imágenes con todos los campos
+        Imagen imagenCompleta1 = Imagen.builder()
                 .id(20)
-                .url("imagen-completa.jpg")
-                .alt("Imagen completa de proyecto")
+                .url("imagen-completa-1.jpg")
+                .alt("Imagen completa 1 de proyecto")
                 .build();
 
-        Experiencia experienciaCompleta = Experiencia.builder()
+        Imagen imagenCompleta2 = Imagen.builder()
                 .id(21)
+                .url("imagen-completa-2.jpg")
+                .alt("Imagen completa 2 de proyecto")
+                .build();
+
+        List<Imagen> imagenesCompletas = Arrays.asList(imagenCompleta1, imagenCompleta2);
+
+        Experiencia experienciaCompleta = Experiencia.builder()
+                .id(22)
                 .titulo("Proyecto Completo")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2024, 12, 31))
                 .descripcion("Descripción completa del proyecto")
                 .link("https://github.com/usuario/proyecto-completo")
                 .tipoExperiencia(TipoExperiencia.TRABAJO_LABORAL_COLABORATIVO)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.ANGULAR, TecnologiaUsada.TYPESCRIPT)) // 🔥 Lista múltiple
-                .imagen(imagenCompleta)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.ANGULAR, TecnologiaUsada.TYPESCRIPT))
+                .imagenes(imagenesCompletas)
                 .usuario(usuario)
                 .build();
 
-        // Configurar mock para imagen completa
-        when(imagenMapper.toImagenDto(imagenCompleta)).thenReturn(
+        // Configurar mock para imágenes completas
+        when(imagenMapper.toImagenDto(imagenCompleta1)).thenReturn(
                 ImagenDto.builder()
                         .id(20)
-                        .url("imagen-completa.jpg")
-                        .alt("Imagen completa de proyecto")
+                        .url("imagen-completa-1.jpg")
+                        .alt("Imagen completa 1 de proyecto")
+                        .build()
+        );
+
+        when(imagenMapper.toImagenDto(imagenCompleta2)).thenReturn(
+                ImagenDto.builder()
+                        .id(21)
+                        .url("imagen-completa-2.jpg")
+                        .alt("Imagen completa 2 de proyecto")
                         .build()
         );
 
@@ -889,12 +1072,14 @@ class ExperienciaMapperTest {
 
         // Assert
         assertNotNull(resultado, "El resultado no debería ser nulo");
-        assertNotNull(resultado.getImagen(), "La imagen no debería ser nula");
-        assertEquals(20, resultado.getImagen().getId(), "El ID de la imagen debería ser 20");
-        assertEquals("imagen-completa.jpg", resultado.getImagen().getUrl(),
-                "La URL de la imagen debería coincidir");
-        assertEquals("Imagen completa de proyecto", resultado.getImagen().getAlt(),
-                "El alt de la imagen debería coincidir");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(2, resultado.getImagenes().size(), "Debería tener 2 imágenes");
+        assertEquals(20, resultado.getImagenes().get(0).getId(), "El ID de la primera imagen debería ser 20");
+        assertEquals("imagen-completa-1.jpg", resultado.getImagenes().get(0).getUrl(),
+                "La URL de la primera imagen debería coincidir");
+        assertEquals(21, resultado.getImagenes().get(1).getId(), "El ID de la segunda imagen debería ser 21");
+        assertEquals("imagen-completa-2.jpg", resultado.getImagenes().get(1).getUrl(),
+                "La URL de la segunda imagen debería coincidir");
         assertEquals(TipoExperiencia.TRABAJO_LABORAL_COLABORATIVO, resultado.getTipoExperiencia(),
                 "El tipo de experiencia debería ser TRABAJO_LABORAL_COLABORATIVO");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
@@ -903,38 +1088,54 @@ class ExperienciaMapperTest {
                         List.of(TecnologiaUsada.ANGULAR, TecnologiaUsada.TYPESCRIPT)),
                 "Las tecnologías usadas deberían ser ANGULAR y TYPESCRIPT");
 
-        // Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagenDto(imagenCompleta);
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagenDto(any(Imagen.class));
     }
 
     @Test
-    @DisplayName("toExperiencia - Debería mapear ExperienciaDto con imagen completa")
-    void toExperiencia_ShouldMapExperienciaDtoWithFullImage() {
+    @DisplayName("toExperiencia - Debería mapear ExperienciaDto con imágenes completas")
+    void toExperiencia_ShouldMapExperienciaDtoWithFullImages() {
         // Arrange - ImagenDto con todos los campos
-        ImagenDto imagenDtoCompleta = ImagenDto.builder()
-                .id(22)
-                .url("imagen-completa-dto.jpg")
-                .alt("Imagen DTO completa de proyecto")
+        ImagenDto imagenDtoCompleta1 = ImagenDto.builder()
+                .id(23)
+                .url("imagen-completa-dto-1.jpg")
+                .alt("Imagen DTO completa 1 de proyecto")
                 .build();
 
+        ImagenDto imagenDtoCompleta2 = ImagenDto.builder()
+                .id(24)
+                .url("imagen-completa-dto-2.jpg")
+                .alt("Imagen DTO completa 2 de proyecto")
+                .build();
+
+        List<ImagenDto> imagenesDtoCompletas = Arrays.asList(imagenDtoCompleta1, imagenDtoCompleta2);
+
         ExperienciaDto experienciaDtoCompleta = ExperienciaDto.builder()
-                .id(23)
+                .id(25)
                 .titulo("Proyecto DTO Completo")
                 .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2024, 12, 31))
                 .descripcion("Descripción DTO completa del proyecto")
                 .link("https://github.com/usuario/proyecto-dto-completo")
                 .tipoExperiencia(TipoExperiencia.TRABAJO_LABORAL_FREELANCE)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.VUE, TecnologiaUsada.TAILWIND)) // 🔥 Lista múltiple
-                .imagen(imagenDtoCompleta)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.VUE, TecnologiaUsada.TAILWIND))
+                .imagenes(imagenesDtoCompletas)
                 .build();
 
         // Configurar mock para imagenDto completa
-        when(imagenMapper.toImagen(imagenDtoCompleta)).thenReturn(
+        when(imagenMapper.toImagen(imagenDtoCompleta1)).thenReturn(
                 Imagen.builder()
-                        .id(22)
-                        .url("imagen-completa-dto.jpg")
-                        .alt("Imagen DTO completa de proyecto")
+                        .id(23)
+                        .url("imagen-completa-dto-1.jpg")
+                        .alt("Imagen DTO completa 1 de proyecto")
+                        .build()
+        );
+
+        when(imagenMapper.toImagen(imagenDtoCompleta2)).thenReturn(
+                Imagen.builder()
+                        .id(24)
+                        .url("imagen-completa-dto-2.jpg")
+                        .alt("Imagen DTO completa 2 de proyecto")
                         .build()
         );
 
@@ -943,12 +1144,14 @@ class ExperienciaMapperTest {
 
         // Assert
         assertNotNull(resultado, "El resultado no debería ser nulo");
-        assertNotNull(resultado.getImagen(), "La imagen no debería ser nula");
-        assertEquals(22, resultado.getImagen().getId(), "El ID de la imagen debería ser 22");
-        assertEquals("imagen-completa-dto.jpg", resultado.getImagen().getUrl(),
-                "La URL de la imagen debería coincidir");
-        assertEquals("Imagen DTO completa de proyecto", resultado.getImagen().getAlt(),
-                "El alt de la imagen debería coincidir");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(2, resultado.getImagenes().size(), "Debería tener 2 imágenes");
+        assertEquals(23, resultado.getImagenes().get(0).getId(), "El ID de la primera imagen debería ser 23");
+        assertEquals("imagen-completa-dto-1.jpg", resultado.getImagenes().get(0).getUrl(),
+                "La URL de la primera imagen debería coincidir");
+        assertEquals(24, resultado.getImagenes().get(1).getId(), "El ID de la segunda imagen debería ser 24");
+        assertEquals("imagen-completa-dto-2.jpg", resultado.getImagenes().get(1).getUrl(),
+                "La URL de la segunda imagen debería coincidir");
         assertEquals(TipoExperiencia.TRABAJO_LABORAL_FREELANCE, resultado.getTipoExperiencia(),
                 "El tipo de experiencia debería ser TRABAJO_LABORAL_FREELANCE");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
@@ -957,8 +1160,8 @@ class ExperienciaMapperTest {
                         List.of(TecnologiaUsada.VUE, TecnologiaUsada.TAILWIND)),
                 "Las tecnologías usadas deberían ser VUE y TAILWIND");
 
-        // Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagen(imagenDtoCompleta);
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagen(any(ImagenDto.class));
     }
 
     @Test
@@ -966,15 +1169,15 @@ class ExperienciaMapperTest {
     void toExperienciaDto_ShouldHandleExperienciaWithPastDates() {
         // Arrange - Experiencia con fechas en el pasado
         Experiencia experienciaPasada = Experiencia.builder()
-                .id(24)
+                .id(26)
                 .titulo("Proyecto del Pasado")
                 .fechaInicioProyecto(LocalDate.of(2020, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2021, 12, 31))
                 .descripcion("Descripción del proyecto pasado")
                 .link("https://github.com/usuario/proyecto-pasado")
                 .tipoExperiencia(TipoExperiencia.PRACTICA_PROFESIONAL)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.POSTGRESQL, TecnologiaUsada.JAVA)) // 🔥 Lista múltiple
-                .imagen(imagen)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.POSTGRESQL, TecnologiaUsada.JAVA))
+                .imagenes(listaImagenes)
                 .usuario(null)
                 .build();
 
@@ -991,9 +1194,11 @@ class ExperienciaMapperTest {
                 "El tipo de experiencia debería ser PRACTICA_PROFESIONAL");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertEquals(2, resultado.getTecnologiasUsadas().size(), "Debería tener 2 tecnologías");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(2, resultado.getImagenes().size(), "Debería tener 2 imágenes");
 
-        // Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagenDto(experienciaPasada.getImagen());
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagenDto(any(Imagen.class));
     }
 
     @Test
@@ -1001,15 +1206,15 @@ class ExperienciaMapperTest {
     void toExperiencia_ShouldHandleExperienciaDtoWithFutureDates() {
         // Arrange - ExperienciaDto con fechas en el futuro
         ExperienciaDto experienciaDtoFuturo = ExperienciaDto.builder()
-                .id(25)
+                .id(27)
                 .titulo("Proyecto del Futuro")
                 .fechaInicioProyecto(LocalDate.of(2025, 1, 1))
                 .fechaFinProyecto(LocalDate.of(2026, 12, 31))
                 .descripcion("Descripción del proyecto futuro")
                 .link("https://github.com/usuario/proyecto-futuro")
                 .tipoExperiencia(TipoExperiencia.APORTE_CODIGO_ABIERTO)
-                .tecnologiasUsadas(List.of(TecnologiaUsada.MONGODB, TecnologiaUsada.VUE)) // 🔥 Lista múltiple
-                .imagen(imagenDto)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.MONGODB, TecnologiaUsada.VUE))
+                .imagenes(listaImagenesDto)
                 .build();
 
         // Act
@@ -1025,9 +1230,71 @@ class ExperienciaMapperTest {
                 "El tipo de experiencia debería ser APORTE_CODIGO_ABIERTO");
         assertNotNull(resultado.getTecnologiasUsadas(), "Las tecnologías usadas no deberían ser nulas");
         assertEquals(2, resultado.getTecnologiasUsadas().size(), "Debería tener 2 tecnologías");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(2, resultado.getImagenes().size(), "Debería tener 2 imágenes");
 
-        // Verificar que se llamó a ImagenMapper
-        verify(imagenMapper, times(1)).toImagen(experienciaDtoFuturo.getImagen());
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagen(any(ImagenDto.class));
+    }
+
+    @Test
+    @DisplayName("toExperienciaDto - Debería manejar experiencia con imágenes que tienen campos nulos")
+    void toExperienciaDto_ShouldHandleExperienciaWithImagesHavingNullFields() {
+        // Arrange - Imágenes con campos nulos
+        Imagen imagenConNull = Imagen.builder()
+                .id(null)
+                .url(null)
+                .alt(null)
+                .build();
+
+        Imagen imagenConUrlNula = Imagen.builder()
+                .id(30)
+                .url(null)
+                .alt("Alt válido")
+                .build();
+
+        List<Imagen> imagenesConNull = Arrays.asList(imagenConNull, imagenConUrlNula);
+
+        Experiencia experienciaConImagenesNull = Experiencia.builder()
+                .id(31)
+                .titulo("Proyecto con imágenes nulas")
+                .fechaInicioProyecto(LocalDate.of(2024, 1, 1))
+                .fechaFinProyecto(LocalDate.of(2024, 6, 1))
+                .descripcion("Descripción válida")
+                .link("https://github.com/usuario/test")
+                .tipoExperiencia(TipoExperiencia.PROYECTO_PERSONAL)
+                .tecnologiasUsadas(List.of(TecnologiaUsada.JAVA))
+                .imagenes(imagenesConNull)
+                .usuario(null)
+                .build();
+
+        // Configurar mock para imágenes con campos nulos
+        when(imagenMapper.toImagenDto(any(Imagen.class))).thenAnswer(invocation -> {
+            Imagen img = invocation.getArgument(0);
+            if (img == null) return null;
+            return ImagenDto.builder()
+                    .id(img.getId())
+                    .url(img.getUrl())
+                    .alt(img.getAlt())
+                    .build();
+        });
+
+        // Act
+        ExperienciaDto resultado = experienciaMapper.toExperienciaDto(experienciaConImagenesNull);
+
+        // Assert
+        assertNotNull(resultado, "El resultado no debería ser nulo");
+        assertNotNull(resultado.getImagenes(), "La lista de imágenes no debería ser nula");
+        assertEquals(2, resultado.getImagenes().size(), "Debería tener 2 imágenes");
+        assertNull(resultado.getImagenes().get(0).getId(), "El ID de la primera imagen debería ser nulo");
+        assertNull(resultado.getImagenes().get(0).getUrl(), "La URL de la primera imagen debería ser nula");
+        assertNull(resultado.getImagenes().get(0).getAlt(), "El alt de la primera imagen debería ser nulo");
+        assertEquals(30, resultado.getImagenes().get(1).getId(), "El ID de la segunda imagen debería ser 30");
+        assertNull(resultado.getImagenes().get(1).getUrl(), "La URL de la segunda imagen debería ser nula");
+        assertEquals("Alt válido", resultado.getImagenes().get(1).getAlt());
+
+        // Verificar que se llamó a ImagenMapper para cada imagen
+        verify(imagenMapper, times(2)).toImagenDto(any(Imagen.class));
     }
 
     // ==================== TEST NEGATIVO ====================
